--- a/mercadoLibre.css
+++ b/mercadoLibre.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,600;1,700;1,800;1,900&family=Roboto+Mono:ital@1&display=swap');
+
 * {
     margin: 0%;
     padding: 0%;
     box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
 header {
@@ -50,7 +53,6 @@ header {
 
 .menu-hamburguesa {
     grid-area: menu-hamburguesa;
-
     display: flex;
     justify-content: center;
     align-items: center;
@@ -59,7 +61,6 @@ header {
 
 .carrito {
     grid-area: carrito;
-
     display: flex;
     justify-content: center;
     align-items: center;
@@ -75,16 +76,31 @@ header {
     grid-template: "box-img box-info" /
                     3fr     4fr
     ;
-    height: 150px;
+    max-height: 150px;
+    padding: 10px;
+    border-bottom: 1px solid rgb(231, 231, 231);
+    
 }
 
 .box-img {
     grid-area: box-img;
 }
 
+.img-auto {
+    width: 150px;
+    height: 135px;
+    padding-top: 10px;
+    padding-bottom: 15px;
+}
+
 .box-info {
     grid-area: box-info;
-    background-color: blueviolet;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    padding-left: 10px;
+
 }
 
 .compu-mercado {
@@ -92,4 +108,47 @@ header {
     margin-left: 20px;
     width: 100px;
     height: 100px;
+    
+}
+
+.kilometraje {
+    font-size: 11px;
+    font-weight: normal;
+    color: rgb(136, 136, 136);
+}
+
+.precio {
+    font-weight: 600;
+}
+/* 
+.fa-heart {
+    position: absolute;
+    background-color: #ccc;
+    right: 60%;
+    top: 75px;
+    z-index: 50;
+    padding: 5px;
+    border-radius: 50%;
+    color: blue;
+} */
+
+
+.box-corazon {
+    width: 35px;
+    height: 35px;
+    border-radius: 21px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(224, 224, 224, 0.85);
+    position: relative;
+    top: -150px;
+    left: 105px;
+    z-index: 50;
+
+}
+
+.icon-corazon {
+    color: rgb(59, 148, 249);
+    font-size: 1em;
 }
